--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AHBioImageDbs
 Type: Package
 Title: Bio- and biomedical imaging data-set for machine learning and deep learning  (for AnnotationHub)
-Version: 0.1.0
+Version: 0.99.0
 Encoding: UTF-8
 Authors@R: c(
     person (given = "Satoshi", 
@@ -11,11 +11,11 @@ Authors@R: c(
         comment = c(ORCID = "0000-0001-7481-2843")),
     person(given = "Kozo",
            family = "Nishida",
-           role = c("aut", "cre"),
+           role = c("aut"),
            email = "kozo.nishida@gmail.com",
            comment = c(ORCID = "0000-0001-8501-7319"))
     )
-Maintainer: Satoshi Kume <satoshi.kume.1984@gmail.com>
+
 Depends: R (>= 4.1.0)
 Imports: AnnotationHub (>= 2.23.0)
 Suggests: EBImage, purrr
