--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,9 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-8501-7319"))
     )
 
-Depends: R (>= 4.1.0)
+Depends: R (>= 4.1.0) was that 
 Imports: AnnotationHub (>= 2.23.0)
-Suggests: EBImage, purrr
+Suggests: EBImage, magick, purrr, magrittr, filesstrings, animation
 
 Description: The package provides a bioimage dataset for 
 	the image analysis using machine learning and deep learning.
