--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-8501-7319"))
     )
 
-Depends: R (>= 4.1.0) was that 
+Depends: R (>= 4.1.0)
 Imports: AnnotationHub (>= 2.23.0)
 Suggests: EBImage, magick, purrr, magrittr, filesstrings, animation
 
