--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: AHBioImageDbs
 Type: Package
-Title: Bio- and biomedical imaging dataset for machine learning and deep learning (for AnnotationHub)
+Title: Bio- and biomedical imaging dataset for machine learning and 
+deep learning (for AnnotationHub)
 Version: 0.99.1
 Encoding: UTF-8
 Authors@R: c(
@@ -17,11 +18,15 @@ Authors@R: c(
     )
 Depends: R (>= 4.0.0)
 Imports: AnnotationHub (>= 2.22.0)
-Suggests: EBImage, magick, purrr, magrittr, filesstrings, animation, BiocStyle
+Suggests: 
+rmarkdown, knitr, EBImage, magick, 
+purrr, magrittr, filesstrings, 
+animation, BiocStyle
 Description: The package provides a bioimage dataset for 
 	the image analysis using machine learning and deep learning.
 	The dataset includes microscopy imaging data with supervised labels.
-	The data is provided as list data that can be loaded to Keras/tensorflow in R.
+	The data is provided as list data that can be loaded to Keras/tensorflow 
+	in R.
 VignetteBuilder: knitr
 License: Artistic-2.0
 URL: https://github.com/kumeS/AHBioImageDbs
