--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BioImageDbs
 Type: Package
 Title: Bio- and biomedical imaging dataset for machine learning and deep 
-    learning (for AnnotationHub)
+    learning (for ExperimentHub)
 Version: 0.99.1
 Encoding: UTF-8
 Authors@R: c(
@@ -15,7 +15,7 @@ Authors@R: c(
     comment = c(ORCID = "0000-0001-8501-7319"))
     )
 Depends: R (>= 4.1.0)
-Imports: AnnotationHub (>= 2.22.0), markdown, rmarkdown
+Imports: ExperimentHub (>= 2.22.0), markdown, rmarkdown
 Suggests: knitr, 
     BiocStyle,
     magick,
@@ -32,4 +32,4 @@ VignetteBuilder: knitr
 License: Artistic-2.0
 URL: https://github.com/kumeS/BioImageDbs
 LazyLoad: yes
-biocViews: AnnotationHub, FunctionalAnnotation
+biocViews: ExperimentHub, FunctionalAnnotation
