--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,4 @@ License: Artistic-2.0
 URL: https://github.com/kumeS/BioImageDbs
 LazyLoad: yes
 biocViews: ExperimentHub, ExperimentData, CellCulture, Tissue
+RoxygenNote: 7.1.1
