--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,14 +15,17 @@ Authors@R: c(
     comment = c(ORCID = "0000-0001-8501-7319"))
     )
 Depends: R (>= 4.1.0)
-Imports: ExperimentHub (>= 1.16.1), markdown, rmarkdown, EBImage
-Suggests: knitr, 
-    BiocStyle,
+Imports: ExperimentHub (>= 1.16.1), 
+    markdown, 
+    rmarkdown, 
+    EBImage, 
     magick,
     magrittr,
-    purrr,
     filesstrings,
     animation
+Suggests: knitr, 
+    BiocStyle,
+    purrr
 Description: The package provides a bioimage dataset for 
     the image analysis using machine learning and deep learning.
     The dataset includes microscopy imaging data with supervised labels.
